tests/ui/reachable/expr_match.stderr
error: unreachable statement
  --> $DIR/expr_match.rs:8:5
   |
LL |     match () { () => return }
   |     ------------------------- any code following this `match` expression is unreachable, as all arms diverge
LL |     println!("I am dead");
   |     ^^^^^^^^^^^^^^^^^^^^^ unreachable statement
   |
note: the lint level is defined here
  --> $DIR/expr_match.rs:4:9
   |
LL | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^
   = note: this error originates in the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unreachable statement
  --> $DIR/expr_match.rs:19:5
   |
LL |     match () { () if false => return, () => return }
   |     ------------------------------------------------ any code following this `match` expression is unreachable, as all arms diverge
LL |     println!("I am dead");
   |     ^^^^^^^^^^^^^^^^^^^^^ unreachable statement
   |
   = note: this error originates in the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unreachable expression
  --> $DIR/expr_match.rs:25:25
   |
LL |         () if return => (),
   |               ------    ^^ unreachable expression
   |               |
   |               any code following this expression is unreachable

error: unreachable statement
  --> $DIR/expr_match.rs:29:5
   |
LL | /     match () {
LL | |         () if return => (),
LL | |
LL | |         () => return,
LL | |     }
   | |_____- any code following this `match` expression is unreachable, as all arms diverge
LL |       println!("I am dead");
   |       ^^^^^^^^^^^^^^^^^^^^^ unreachable statement
   |
   = note: this error originates in the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 4 previous errors

